wk_taa_taaqa/src/objects/Strategic_Account_RoleDTN__c.object
<CustomObject>
    <description>Defines the Strategic Account Roles of Strategic Account Manager (SAM) and Solution Architect (SA) Per DTN</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Association__c</fullName>
        <description>Association (if any) associated with the account business</description>
        <label>Association</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTN__c</fullName>
        <label>DTN</label>
        <length>7</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offices__c</fullName>
        <description>Number of offices if known or a lower bound</description>
        <label>Offices</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sfdc_Custid__c</fullName>
        <label>Sfdc Custid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solution_Architect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Solution Architect for the Strategic Account</description>
        <label>Solution Architect</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Strategic_Account_RoleDTN1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategic_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Strategic Account Manager for the Account</description>
        <label>Strategic Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Strategic_Account_RoleDTN</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Strategic Account Role-DTN</label>
    <nameField>
        <displayFormat>SAM-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Strategic Account RoleDTN</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>